// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a ListItem control 1`] = `
<ListItem
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  title="test title"
  useedit={false}
  visible={true}
  widget={null}
  width=""
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#ffe11a",
      }
    }
  >
    <Item
      className="ui-listitem"
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      hiddenLeftButton={false}
      hiddenRightButton={false}
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id=""
      layout={5}
      leftButton={null}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      onSelect={[Function]}
      onUpdate={[Function]}
      rightButton={null}
      selected={false}
      sizing="normal"
      stacked={false}
      style={Object {}}
      testing={true}
      title="test title"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <styled.li
          className="ui-item"
          id=""
          nohover={false}
          onBlur={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          style={Object {}}
        >
          <li
            className="ui-item sc-ifAKCX hTsxJQ"
            id=""
            onBlur={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            style={Object {}}
          >
            <Title
              className="ui-listitem"
              contentEditable={false}
              direction="right"
              disabled={true}
              focus={false}
              height=""
              hiddenLeftButton={false}
              hiddenRightButton={false}
              href={
                Object {
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              id=""
              layout={5}
              leftButton={null}
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              onSelect={[Function]}
              onUpdate={[Function]}
              rightButton={null}
              selected={false}
              sizing="normal"
              stacked={false}
              style={
                Object {
                  "padding": "2px 4px",
                }
              }
              testing={true}
              title="test title"
              useedit={false}
              visible={true}
              widget={null}
              width=""
            >
              <styled.div
                className="ui-title-bar"
                layout={5}
                style={
                  Object {
                    "padding": "2px 4px",
                  }
                }
              >
                <div
                  className="ui-title-bar sc-bxivhb doMVNq"
                  style={
                    Object {
                      "padding": "2px 4px",
                    }
                  }
                >
                  <styled.div
                    className="ui-title"
                    contentEditable={false}
                    direction="right"
                    disabled={true}
                    focus={false}
                    height=""
                    hiddenLeftButton={false}
                    hiddenRightButton={false}
                    href={
                      Object {
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id=""
                    layout={5}
                    leftButton={null}
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onMouseOut={[Function]}
                    onSelect={[Function]}
                    onUpdate={[Function]}
                    rightButton={null}
                    selected={false}
                    sizing="normal"
                    stacked={false}
                    style={
                      Object {
                        "padding": "2px 4px",
                      }
                    }
                    testing={true}
                    title="test title"
                    useedit={false}
                    visible={true}
                    widget={null}
                    width=""
                  >
                    <div
                      className="ui-title sc-gzVnrw guHxJf"
                      contentEditable={false}
                      direction="right"
                      disabled={true}
                      height=""
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      selected={false}
                      style={
                        Object {
                          "padding": "2px 4px",
                        }
                      }
                      title="test title"
                      width=""
                    >
                      <Label
                        className="ui-listitem"
                        contentEditable={false}
                        direction="right"
                        disabled={true}
                        focus={false}
                        height=""
                        hiddenLeftButton={false}
                        hiddenRightButton={false}
                        href={
                          Object {
                            "selectHandler": [Function],
                            "sizing": "normal",
                          }
                        }
                        id=""
                        layout={5}
                        leftButton={null}
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        onMouseOut={[Function]}
                        onSelect={[Function]}
                        onUpdate={[Function]}
                        rightButton={null}
                        selected={false}
                        sizing="normal"
                        stacked={false}
                        style={
                          Object {
                            "padding": "2px 4px",
                          }
                        }
                        testing={true}
                        text="test title"
                        title="test title"
                        useedit={false}
                        visible={true}
                        widget={null}
                        width=""
                      >
                        <span
                          className="ui-label label normal ui-listitem disabled nohover"
                          contentEditable={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={
                            Object {
                              "padding": "2px 4px",
                            }
                          }
                          suppressContentEditableWarning={true}
                        >
                          test title
                        </span>
                      </Label>
                    </div>
                  </styled.div>
                </div>
              </styled.div>
            </Title>
          </li>
        </styled.li>
      </ThemeProvider>
    </Item>
  </ThemeProvider>
</ListItem>
`;

exports[`Test making ListItem control invisible 1`] = `
<ListItem
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  title="test title"
  useedit={false}
  visible={false}
  widget={null}
  width=""
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "hoverColor": "#ffe11a",
      }
    }
  >
    <Item
      className="ui-listitem"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      hiddenLeftButton={false}
      hiddenRightButton={false}
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id=""
      layout={5}
      leftButton={null}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      onSelect={[Function]}
      onUpdate={[Function]}
      rightButton={null}
      selected={false}
      sizing="normal"
      stacked={false}
      style={Object {}}
      testing={true}
      title="test title"
      useedit={false}
      visible={false}
      widget={null}
      width=""
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#004358",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "hoverColor": "#ffe11a",
          }
        }
      >
        <styled.li
          className="ui-item"
          id=""
          nohover={false}
          onBlur={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          style={Object {}}
        >
          <li
            className="ui-item sc-ifAKCX hTsxJQ"
            id=""
            onBlur={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            style={Object {}}
          >
            <Title
              className="ui-listitem"
              contentEditable={false}
              direction="right"
              disabled={false}
              focus={false}
              height=""
              hiddenLeftButton={false}
              hiddenRightButton={false}
              href={
                Object {
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              id=""
              layout={5}
              leftButton={null}
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              onSelect={[Function]}
              onUpdate={[Function]}
              rightButton={null}
              selected={false}
              sizing="normal"
              stacked={false}
              style={
                Object {
                  "padding": "2px 4px",
                }
              }
              testing={true}
              title="test title"
              useedit={false}
              visible={false}
              widget={null}
              width=""
            >
              <styled.div
                className="ui-title-bar ripple"
                layout={5}
                style={
                  Object {
                    "padding": "2px 4px",
                  }
                }
              >
                <div
                  className="ui-title-bar ripple sc-bxivhb doMVNq"
                  style={
                    Object {
                      "padding": "2px 4px",
                    }
                  }
                >
                  <styled.div
                    className="ui-title"
                    contentEditable={false}
                    direction="right"
                    disabled={false}
                    focus={false}
                    height=""
                    hiddenLeftButton={false}
                    hiddenRightButton={false}
                    href={
                      Object {
                        "selectHandler": [Function],
                        "sizing": "normal",
                      }
                    }
                    id=""
                    layout={5}
                    leftButton={null}
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onMouseOut={[Function]}
                    onSelect={[Function]}
                    onUpdate={[Function]}
                    rightButton={null}
                    selected={false}
                    sizing="normal"
                    stacked={false}
                    style={
                      Object {
                        "padding": "2px 4px",
                      }
                    }
                    testing={true}
                    title="test title"
                    useedit={false}
                    visible={false}
                    widget={null}
                    width=""
                  >
                    <div
                      className="ui-title sc-dnqmqq ckIZaK"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      height=""
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      selected={false}
                      style={
                        Object {
                          "padding": "2px 4px",
                        }
                      }
                      title="test title"
                      width=""
                    >
                      <Label
                        className="ui-listitem"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        focus={false}
                        height=""
                        hiddenLeftButton={false}
                        hiddenRightButton={false}
                        href={
                          Object {
                            "selectHandler": [Function],
                            "sizing": "normal",
                          }
                        }
                        id=""
                        layout={5}
                        leftButton={null}
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        onMouseOut={[Function]}
                        onSelect={[Function]}
                        onUpdate={[Function]}
                        rightButton={null}
                        selected={false}
                        sizing="normal"
                        stacked={false}
                        style={
                          Object {
                            "padding": "2px 4px",
                          }
                        }
                        testing={true}
                        text="test title"
                        title="test title"
                        useedit={false}
                        visible={false}
                        widget={null}
                        width=""
                      >
                        <span
                          className="ui-label label normal ui-listitem invisible"
                          contentEditable={false}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onDoubleClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyPress={[Function]}
                          style={
                            Object {
                              "padding": "2px 4px",
                            }
                          }
                          suppressContentEditableWarning={true}
                        >
                          test title
                        </span>
                      </Label>
                    </div>
                  </styled.div>
                </div>
              </styled.div>
            </Title>
          </li>
        </styled.li>
      </ThemeProvider>
    </Item>
  </ThemeProvider>
</ListItem>
`;

exports[`Test retrieval of ListItem props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "hiddenLeftButton": false,
  "hiddenRightButton": false,
  "href": Object {
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": "",
  "layout": 5,
  "leftButton": null,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onMouseOut": [Function],
  "onSelect": [Function],
  "onUpdate": [Function],
  "rightButton": null,
  "selected": false,
  "sizing": "normal",
  "stacked": false,
  "style": Object {},
  "testing": true,
  "title": "",
  "useedit": false,
  "visible": true,
  "widget": null,
  "width": "",
}
`;

exports[`Test the creation of a ListItem control with left & right title 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#ffe11a",
    }
  }
>
  <Item
    className="ui-listitem"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    title="test title left"
    useedit={false}
    visible={true}
    widget="test title right"
    width=""
  />
</ThemeProvider>
`;

exports[`Test the creation of a ListItem control with simple title 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "hoverColor": "#ffe11a",
    }
  }
>
  <Item
    className="ui-listitem"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={true}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    title="test title"
    useedit={false}
    visible={true}
    widget={null}
    width=""
  />
</ThemeProvider>
`;
